@@ -1,5 +1,12 @@
 2007-12-04  Dan Williams  <dcbw@redhat.com>
 
+	* src/wireless-security/eap-method-peap.c
+	  src/wireless-security/eap-method-ttls.c
+		- (fill_connection): correctly handle & update the CA certificate
+			ignore option
+
+2007-12-04  Dan Williams  <dcbw@redhat.com>
+
 	* src/wireless-security/eap-method.c
 	  po/POTFILES.in
 		- (eap_method_default_file_chooser_filter_new): add a filter name
